profilelist1exp/unpackaged/objects/Group_Member_Queue__c.object
<CustomObject>
    <description>This object holds the Group Member manipulation records to process as part of GAM Account access recalculation process.</description>
    <fields>
        <fullName>Child_Group_Id__c</fullName>
        <label>Child Group Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GAM User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Member_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <label>Group ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Group Member Queue</label>
    <nameField>
        <displayFormat>GMQ-{0000000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Member Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>